--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -1,3 +1,4 @@
 {
-  "helloWorld": "Hello World"
+  "qr_code_scanner_title": "QR Code Scanner",
+  "qr_code_scanner_description": "Scan QR Code to get the URL"
 }
